# heart_beat

./: CMakeLists.txt  README.md  package.xml
P1/: StereoCalibration.ini  groundtruth.txt  train_split.csv
config/: endoscope.yaml
include/: Feature_extractor.h  OpticalFlow.h  OpticalFlowPose.h  TrackedMatch.h  Triangulation.h  Visualizer.h  Wavelets.h  camera_pose_estimation.h  data.h
launch/: camera_pose_estimation.launch  load_video.launch  opticalflowpose.launch
scripts/: File_Delaunay.py  SPIEGAZIONE CODICE TRACCIAMENTO PUNTI.docx  cut_video.py  video_to_ros.py
src/: Feature_extractor.cpp  OpticalFlow.cpp  OpticalFlowPose.cpp  Triangulation.cpp  Visualizer.cpp  Wavelets.cpp  camera_pose_estimation.cpp  copiacamera.cpp  data.cpp  main.cpp  prova_wavelet.c
